# Scripts4Mastodon

./: .env  Cargo.toml  README.md
memos/: .env
mirror/: .env  Cargo.toml  readme.md
src/: main.rs
unfollowers/: .env  readme.md
unfollowers/src/: main.rs
unsplash_bot/: .env  Cargo.toml  readme.md
wallhaven_header/: readme.md
